--- a/compose.yaml
+++ b/compose.yaml
@@ -2,23 +2,15 @@ version: '3'
 services:
   nginx:
     build: ./nginx/
-    container_name: examplenginx 
-    ports:
-      - "80:80"
-      - "443:443"
-    links:
-      - flaskapp:exampleflask
-    volumes:
-      - /etc/letsencrypt:/etc/letsencrypt
+    container_name: nginx_flaskapp
+    networks: 
+      - app
   flaskapp:
     build: ./flaskapp/
-    container_name: exampleflask
-    expose:
-      - "8080"
-    links:
-      - redis:exampleredis
-  redis:
-    build: ./redisdb/
-    container_name: exampleredis
-    expose:
-      - "6379"
+    container_name: flaskapp
+    networks:
+      - app
+  networks:
+    app:
+      external: true
+      name: app
