--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,12 @@
 version: "3.9"
 services:
-  web:
+  flask:
     build: .
+    container_name: flaskapp
     ports:
       - "8080:5000"
+    depends_on:
+       - redis
   redis:
     image: "redis:alpine"
+
