--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,8 @@
 version: "3.9"
 services:
-  flask:
-    build: .
-    container_name: flaskapp
+  web:
+    build: ./flask
     ports:
-      - "8080:5000"
-    depends_on:
-       - redis
+      - "80:5000"
   redis:
     image: "redis:alpine"
-
