--- a/flask/Dockerfile
+++ b/flask/Dockerfile
@@ -1,11 +1,8 @@
-FROM python:3.7-alpine
+FROM: python:alpine
 RUN pip install --upgrade pip
-WORKDIR /code
-ENV FLASK_APP=app.py
-ENV FLASK_RUN_HOST=0.0.0.0
-RUN apk add --no-cache gcc musl-dev linux-headers
-COPY requirements.txt requirements.txt
-RUN pip install -r requirements.txt
-EXPOSE 5000
-COPY . .
-CMD ["flask", "run"]
+WORKDIR /app
+RUN python -m venv env
+RUN source env/bin/activate
+RUN pip install flask uwsgi redis
+RUN pip list
+
