new flask dockerfile

--- a/flask/Dockerfile
+++ b/flask/Dockerfile
@@ -1,8 +1,10 @@
-FROM: python:alpine
+FROM python:alpine
 RUN pip install --upgrade pip
 WORKDIR /app
+ADD . /app
 RUN python -m venv env
 RUN source env/bin/activate
-RUN pip install flask uwsgi redis
+RUN pip install flask gunicorn redis
 RUN pip list
-
+RUN pip freeze > requirements.txt
+CMD ["gunicorn", "app.ini"]
